--- a/examples/debugging/poisson.ipynb
+++ b/examples/debugging/poisson.ipynb
@@ -203,7 +203,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.9.10 | packaged by conda-forge | (main, Jan 28 2022, 19:23:19) \n[GCC 9.4.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
