--- a/examples/debugging/mem.ipynb
+++ b/examples/debugging/mem.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -36,10 +36,9 @@
       "Total number of log files 2\n",
       "444364 /home/bastian/D1/registration/coarse-outputs/444364/RK20A1e-02LBFGS20\n",
       "/home/bastian/D1/registration/mri2fem-dataset/processed/coarsecropped/coarsenedabbytoernie.mgz\n",
-      "Did not find 444365\n",
-      "444365 /home/bastian/d1/registration/coarse-outputs/444365/RKA0.01LBFGS20\n",
-      "\n",
-      "444365 RKA0.01LBFGS20 probably still running init? Continue.\n"
+      "444366 /home/bastian/D1/registration/coarse-outputs/444366/RKA0.01LBFGS20\n",
+      "/home/bastian/D1/registration/mri2fem-dataset/processed/coarsecropped/coarsenedabbytoernie.mgz\n",
+      "444366 RKA0.01LBFGS20 probably still running init? Continue.\n"
      ]
     },
     {
@@ -249,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
